networking/ingress/homelab-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-web
  namespace: homelab
spec:
  ingressClassName: traefik
  rules:
    - host: homelab.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homelab-web
                port:
                  number: 80
